@@ -1,13 +1,12 @@
 package org.dpbe.domain.consultation.service;
 
-import java.util.List;
-import java.util.stream.Collectors;
 import org.dpbe.domain.consultation.dto.InterviewRecordCreateRequest;
 import org.dpbe.domain.consultation.dto.InterviewRecordResponse;
 import org.dpbe.domain.consultation.dto.InterviewRecordUpdateRequest;
 import org.dpbe.domain.consultation.entity.InterviewRecord;
 import org.dpbe.domain.consultation.repository.InterviewRecordRepository;
 import org.dpbe.global.auth.service.AuthAccessService;
+import org.dpbe.global.dto.PageResponse;
 import org.dpbe.global.exception.ApiException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -15,6 +14,10 @@ import org.springframework.transaction.annotation.Transactional;
 @Service
 @Transactional(readOnly = true)
 public class InterviewRecordService {
+
+    private static final int DEFAULT_PAGE = 1;
+    private static final int DEFAULT_SIZE = 20;
+    private static final int MAX_SIZE = 100;
 
     private final InterviewRecordRepository recordRepo;
     private final AuthAccessService authAccessService;
@@ -25,11 +28,27 @@ public class InterviewRecordService {
         this.authAccessService = authAccessService;
     }
 
-    public List<InterviewRecordResponse> findAll() {
+    public PageResponse<InterviewRecordResponse> findAll(int page, int size) {
         authAccessService.requireInterviewManageAccess();
-        return recordRepo.findAll().stream()
+        int normalizedPage = normalizePage(page);
+        int normalizedSize = normalizeSize(size);
+        int offset = (normalizedPage - 1) * normalizedSize;
+        int total = recordRepo.countAll();
+        var items = recordRepo.findPage(normalizedSize, offset).stream()
                 .map(InterviewRecordResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageResponse<>(normalizedPage, normalizedSize, total, items);
+    }
+
+    private int normalizePage(int page) {
+        return page < 1 ? DEFAULT_PAGE : page;
+    }
+
+    private int normalizeSize(int size) {
+        if (size < 1) {
+            return DEFAULT_SIZE;
+        }
+        return Math.min(size, MAX_SIZE);
     }
 
     private Long parseId(String no) {
