@@ -1,20 +1,23 @@
 package org.dpbe.domain.sales.service;
 
 import java.time.LocalDateTime;
-import java.util.List;
-import java.util.stream.Collectors;
 import org.dpbe.domain.common.enums.ChannelType;
 import org.dpbe.domain.sales.dto.ChannelRecruitmentRequest;
 import org.dpbe.domain.sales.dto.ChannelRecruitmentResponse;
 import org.dpbe.domain.sales.entity.ChannelRecruitment;
 import org.dpbe.domain.sales.repository.ChannelRecruitmentRepository;
 import org.dpbe.global.auth.service.AuthAccessService;
+import org.dpbe.global.dto.PageResponse;
 import org.dpbe.global.exception.ApiException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 @Service
 public class ChannelRecruitmentService {
+
+    private static final int DEFAULT_PAGE = 1;
+    private static final int DEFAULT_SIZE = 20;
+    private static final int MAX_SIZE = 100;
 
     private final ChannelRecruitmentRepository repository;
     private final AuthAccessService authAccessService;
@@ -26,11 +29,27 @@ public class ChannelRecruitmentService {
     }
 
     @Transactional(readOnly = true)
-    public List<ChannelRecruitmentResponse> findAll() {
+    public PageResponse<ChannelRecruitmentResponse> findAll(int page, int size) {
         authAccessService.requireSalesOperationAccess();
-        return repository.findAll().stream()
+        int normalizedPage = normalizePage(page);
+        int normalizedSize = normalizeSize(size);
+        int offset = (normalizedPage - 1) * normalizedSize;
+        int total = repository.countAll();
+        var items = repository.findPage(normalizedSize, offset).stream()
                 .map(ChannelRecruitmentResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return new PageResponse<>(normalizedPage, normalizedSize, total, items);
+    }
+
+    private int normalizePage(int page) {
+        return page < 1 ? DEFAULT_PAGE : page;
+    }
+
+    private int normalizeSize(int size) {
+        if (size < 1) {
+            return DEFAULT_SIZE;
+        }
+        return Math.min(size, MAX_SIZE);
     }
 
     @Transactional
